Avoid using dark mode when printing

--- a/src/govuk/objects/_template.scss
+++ b/src/govuk/objects/_template.scss
@@ -47,14 +47,17 @@
     background-color: var(--govuk-body-background-colour);
   }
 
-  .govuk-template--dark {
-    --govuk-canvas-background-colour: #333;
-    --govuk-body-background-colour: #222;
-    --govuk-text-colour: #fff;
-    --govuk-secondary-text-colour: #ccc;
-    --govuk-link-colour: lightblue;
-    --govuk-link-visited-colour: lightpink;
-    --govuk-link-hover-colour: aqua;
-    --govuk-link-active-colour: #fff;
+
+  @include govuk-media-query($media-type: screen) {
+    .govuk-template--dark {
+      --govuk-canvas-background-colour: #333;
+      --govuk-body-background-colour: #222;
+      --govuk-text-colour: #fff;
+      --govuk-secondary-text-colour: #ccc;
+      --govuk-link-colour: lightblue;
+      --govuk-link-visited-colour: lightpink;
+      --govuk-link-hover-colour: aqua;
+      --govuk-link-active-colour: #fff;
+    }
   }
 }
